Correccion historial
Se agrego, una modificacin en los historiales, para tambien tener en cuenta las cancelaciones y fehcas de cambio en alguna de estas
